# programador-computacional-duocuc

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.jsonc  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCPs_ready for using.md  README.md  SECURITY.md  context.md  llm.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  tarea-curso.md
.github/workflows/: ai-mentions.yml  ci.yml  deploy-pages.yml  mirror-repos.yml  security.yml  sync-google-drive.yml
Bimestre-01 - Fund. Prog, Antropologia/Fundamentos-Programacion/: README.md
Bimestre-04 - Consulta BD, Cloud Computing/Consultas BD/: README.md
Bimestre-04 - Consulta BD, Cloud Computing/Etica/: README.md
Bimestre-05 - Prog. BD, DevOps, Requisitos/DevOps/: README.md
Bimestre-05 - Prog. BD, DevOps, Requisitos/SQL-Programacion/: README.md
Bimestre-06 - Seguridad, Backend I, Ing. Software I/Ingenieria-Software-I/: README.md
Bimestre-08 - Backend III, Frontend I, Arq. Software/Arquitectura-Software/: README.md
Bimestre-08 - Backend III, Frontend I, Arq. Software/Frontend-I/: README.md
apps/astro-site/: .prettierignore  .prettierrc.json  astro.config.mjs  eslint.config.mjs  original_index_backup.html  package-lock.json  package.json
coursework/bimestre-01-fundamentos-prog-antropologia/: README.md
coursework/bimestre-02-poo-i-comunicacion/: README.md
coursework/bimestre-03-poo-ii-modelamiento-bd/: README.md
coursework/bimestre-04-consulta-bd-cloud-computing/: README.md
docs/: conventions.md  index.html  recursos-github.md
resources/: README.md
scripts/: check-links.sh  check-no-ai-mentions.sh  install-hooks.sh  migrate-bimestres-frontmatter.mjs  new-bimestre.sh  update-context.sh
sessions/: 2026-04-11.md  _template.md
tests/: test_smoke.py
(+475 files in other folders)
